Update azure-pipelines.yml for Azure Pipelines
create a job task for ci-cd pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,11 @@ trigger:
 - main
 
 pool:
+- task: ServiceNow-DevOps-Agent-Job-Notification@1
+  inputs:
+    connectedServiceName: 'Shahrukh*2'
+    upstream: 'Build'
+    Phase: 'STARTED'
   vmImage: ubuntu-latest
 
 steps:
