--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,29 @@
 
 trigger:
 - main
-
+- task: ServiceNow-DevOps-Server-Change-Acceleration@1
+  inputs:
+    connectedServiceName: 'Shahrukh*2'
+    UpstreamJob: 'Test'
+    changeRequestDetails: |
+      - task: ServiceNow-DevOps-Server-Change-Acceleration@1
+                    inputs:
+                        connectedServiceName: 'DevopsDemoProject-ServiceNow DevOps Service Connection'
+                        changeRequestDetails: |
+                          {
+                            "setCloseCode": false,
+                            "attributes": {
+                              "requested_by": {
+                                  "name": "test user"
+                              },
+                              "category": "DevOps",
+                              "priority": "2",
+                              "comments": "This is a sample pipeline script to be added in your change step",
+                              "work_notes": "Update this to work_notes",
+                              "start_date": "2022-01-05 11:59:59",
+                              "end_date": "2022-01-08 11:59:59"
+                           }
+                          }
 pool:
   vmImage: ubuntu-latest
 
