--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,27 @@
 # Node.js with Vue
+- task: ServiceNow-DevOps-Server-Change-Acceleration@1
+  inputs:
+    connectedServiceName: 'Shahrukh*2'
+    UpstreamJob: 'Deploy'
+    changeRequestDetails: |
+      task: ServiceNow-DevOps-Server-Change-Acceleration@1
+                    inputs:
+                        connectedServiceName: 'DevopsDemoProject-ServiceNow DevOps Service Connection'
+                        changeRequestDetails: |
+                          {
+                            "setCloseCode": false,
+                            "attributes": {
+                              "requested_by": {
+                                  "name": "test user"
+                              },
+                              "category": "DevOps",
+                              "priority": "2",
+                              "comments": "This is a sample pipeline script to be added in your change step",
+                              "work_notes": "Update this to work_notes",
+                              "start_date": "2022-01-05 11:59:59",
+                              "end_date": "2022-01-08 11:59:59"
+                           }
+                          }
 # Build a Node.js project that uses Vue.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
